--- a/never-scared/styles.css
+++ b/never-scared/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient( 111.4deg,  rgba(238,113,113,1) 1%, rgba(246,215,148,1) 58% );
+    background-image: linear-gradient( 111.4deg,  rgb(246, 19, 19) 1%, rgba(50,50,50,1) 58% );
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -18,9 +18,15 @@ h1 {
     font-size: 80px;
 }
   
-video {
+.music {
     max-width: 50%;
     height: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.spanish {
+    max-width: 30%;
     margin-left: auto;
     margin-right: auto;
 }
